--- a/src/app/general-screen-feature/pages/home-page/home-page.component.html
+++ b/src/app/general-screen-feature/pages/home-page/home-page.component.html
@@ -2,6 +2,6 @@
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h1 class="u-text u-text-default u-text-1">Welcome To Your Library</h1>
       <p class="u-text u-text-2">Click to open your new library</p>
-      <a href="#" class="u-btn u-btn-rectangle u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-2-base u-radius-0 u-btn-1">Open your library</a>
+      <a routerLink="/permission" class="u-btn u-btn-rectangle u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-2-base u-radius-0 u-btn-1">Open your library</a>
     </div>
   </section>
