--- a/src/app/popups-feature/components/edit-image/edit-image.component.html
+++ b/src/app/popups-feature/components/edit-image/edit-image.component.html
@@ -1,21 +1,22 @@
 <div [ngClass]="['modal',editPopService.getPopUpClass()]">
     <div class="modal-container">
         <div class="modal-left">
-            <h1 class="modal-title">Welcome!</h1>
-            <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
+            <h1 class="modal-title">Edit Picture Data</h1>
+            <p class="modal-desc">Click save to save your changes!</p>
             <div class="input-block">
-                <label for="email" class="input-label">Email</label>
-                <input type="email" name="email" id="email" placeholder="Email">
+                <label for="title" class="input-label">Title</label>
+                <input type="text" name="title" id="title" placeholder="Title">
             </div>
             <div class="input-block">
-                <label for="password" class="input-label">Password</label>
-                <input type="password" name="password" id="password" placeholder="Password">
+                <app-location-picker></app-location-picker>
+            </div>
+            <div class="input-block">
+                <select multiple></select>
             </div>
             <div class="modal-buttons">
-                <a href="" class="">Forgot your password?</a>
-                <button class="input-button">Login</button>
+                <a href="" class="">Save Changes</a>
+                <button class="input-button">Save</button>
             </div>
-            <p class="sign-up">Don't have an account? <a href="#">Sign up now</a></p>
         </div>
         <div class="modal-right">
             <img src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dfd2ec5a01006fd8c4d7592a381d3776&auto=format&fit=crop&w=1000&q=80"
