--- a/src/app/add-image-feature/components/camera-approve-pic/camera-approve-pic.component.html
+++ b/src/app/add-image-feature/components/camera-approve-pic/camera-approve-pic.component.html
@@ -1,52 +1,82 @@
 <section class="u-clearfix u-section-1" id="sec-c383">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
-        <div class="u-layout">
-          <div class="u-layout-row">
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1">
-              <div class="u-container-layout u-container-layout-1">
-                <a href="https://nicepage.com/c/tabs-website-templates" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-text-hover-grey-90 u-btn-1"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 57.149 57.15" x="0px" y="0px" style="width: 1em; height: 1em;"><g><g><g><path d="M13.109,35.265H3.558C1.596,35.265,0,33.416,0,31.144V4.966c0-2.271,1.596-4.119,3.558-4.119h9.551     c1.962,0,3.558,1.848,3.558,4.119v26.178C16.667,33.416,15.071,35.265,13.109,35.265z M3.558,3.847C3.367,3.847,3,4.283,3,4.966     v26.178c0,0.684,0.366,1.121,0.558,1.121h9.551c0.191,0,0.558-0.438,0.558-1.121V4.966c0-0.684-0.366-1.119-0.558-1.119H3.558z"></path>
-</g><g><path d="M31.73,56.302c-3.01,0-5.458-2.447-5.458-5.457c0-0.203,0.012-0.406,0.035-0.611c-0.036-0.18-0.04-0.363-0.001-0.541     c1.043-4.781-1.13-10.211-2.518-13.021c-0.12-0.242-0.237-0.478-0.349-0.691c-0.21-0.243-0.494-0.407-0.814-0.467h-0.411     c-0.059,0-0.152-0.006-0.224-0.015c-2.278-0.129-4.038-1.979-4.038-4.248V5.109c0-2.35,1.912-4.262,4.262-4.262h29.475     c0.13,0,0.255,0.016,0.373,0.047c2.761,0.291,4.881,2.615,4.881,5.412c0,1.504-0.612,2.869-1.607,3.857     c1.112,1,1.813,2.449,1.813,4.059c0,1.557-0.655,2.963-1.704,3.959c1.049,0.994,1.704,2.402,1.704,3.959     s-0.655,2.963-1.704,3.957c1.049,0.996,1.704,2.402,1.704,3.959c0,3.01-2.448,5.459-5.458,5.459l-12.607-0.002     c3.525,10.961-2.736,18.311-3.021,18.637c-0.006,0.006-0.012,0.012-0.016,0.021C35.014,55.507,33.412,56.302,31.73,56.302z      M29.333,49.857c0.026,0.16,0.026,0.322-0.007,0.482c-0.036,0.168-0.055,0.338-0.055,0.506c0,1.355,1.104,2.457,2.459,2.457     c0.789,0,1.512-0.373,1.984-1.023c0.047-0.065,0.1-0.127,0.156-0.184c0.695-0.855,5.824-7.646,1.674-17.5     c-0.195-0.463-0.146-0.992,0.133-1.41c0.277-0.42,0.746-0.672,1.25-0.672h14.762l0,0c0.656,0,1.273-0.254,1.738-0.719     c0.463-0.465,0.719-1.082,0.719-1.738c0-1.355-1.103-2.459-2.457-2.459c-0.828,0-1.5-0.672-1.5-1.5s0.672-1.5,1.5-1.5     c1.354,0,2.457-1.102,2.457-2.457s-1.103-2.459-2.457-2.459c-0.828,0-1.5-0.672-1.5-1.5s0.672-1.5,1.5-1.5     c1.354,0,2.457-1.104,2.457-2.459s-1.103-2.457-2.457-2.457c-0.828,0-1.5-0.672-1.5-1.5c0-0.799,0.625-1.477,1.422-1.52     c1.307-0.068,2.331-1.141,2.331-2.439c0-1.301-1.024-2.371-2.331-2.439c-0.061-0.004-0.118-0.01-0.176-0.02H22.214     c-0.695,0-1.262,0.566-1.262,1.262v26.143c0,0.677,0.533,1.228,1.214,1.253c0.03,0.002,0.077,0.006,0.122,0.01h0.449     c0.063,0,0.127,0.004,0.189,0.012c1.201,0.154,2.26,0.771,2.981,1.74c0.045,0.063,0.086,0.127,0.122,0.195     c0.143,0.27,0.294,0.567,0.448,0.883C28.33,39.093,30.295,44.609,29.333,49.857z"></path>
-</g>
-</g>
-</g></svg><img></span>&nbsp;Try Again
-                </a>
-              </div>
+  <div class="u-clearfix u-sheet u-sheet-1">
+    <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
+      <div class="u-layout">
+        <div class="u-layout-row">
+          <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-1">
+            <div class="u-container-layout u-container-layout-1">
+              <a (click)="tabsService.toggleCameraTab()"
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-text-hover-grey-90 u-btn-1"><span
+                  class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 57.149 57.15" x="0px" y="0px"
+                    style="width: 1em; height: 1em;">
+                    <g>
+                      <g>
+                        <g>
+                          <path
+                            d="M13.109,35.265H3.558C1.596,35.265,0,33.416,0,31.144V4.966c0-2.271,1.596-4.119,3.558-4.119h9.551     c1.962,0,3.558,1.848,3.558,4.119v26.178C16.667,33.416,15.071,35.265,13.109,35.265z M3.558,3.847C3.367,3.847,3,4.283,3,4.966     v26.178c0,0.684,0.366,1.121,0.558,1.121h9.551c0.191,0,0.558-0.438,0.558-1.121V4.966c0-0.684-0.366-1.119-0.558-1.119H3.558z">
+                          </path>
+                        </g>
+                        <g>
+                          <path
+                            d="M31.73,56.302c-3.01,0-5.458-2.447-5.458-5.457c0-0.203,0.012-0.406,0.035-0.611c-0.036-0.18-0.04-0.363-0.001-0.541     c1.043-4.781-1.13-10.211-2.518-13.021c-0.12-0.242-0.237-0.478-0.349-0.691c-0.21-0.243-0.494-0.407-0.814-0.467h-0.411     c-0.059,0-0.152-0.006-0.224-0.015c-2.278-0.129-4.038-1.979-4.038-4.248V5.109c0-2.35,1.912-4.262,4.262-4.262h29.475     c0.13,0,0.255,0.016,0.373,0.047c2.761,0.291,4.881,2.615,4.881,5.412c0,1.504-0.612,2.869-1.607,3.857     c1.112,1,1.813,2.449,1.813,4.059c0,1.557-0.655,2.963-1.704,3.959c1.049,0.994,1.704,2.402,1.704,3.959     s-0.655,2.963-1.704,3.957c1.049,0.996,1.704,2.402,1.704,3.959c0,3.01-2.448,5.459-5.458,5.459l-12.607-0.002     c3.525,10.961-2.736,18.311-3.021,18.637c-0.006,0.006-0.012,0.012-0.016,0.021C35.014,55.507,33.412,56.302,31.73,56.302z      M29.333,49.857c0.026,0.16,0.026,0.322-0.007,0.482c-0.036,0.168-0.055,0.338-0.055,0.506c0,1.355,1.104,2.457,2.459,2.457     c0.789,0,1.512-0.373,1.984-1.023c0.047-0.065,0.1-0.127,0.156-0.184c0.695-0.855,5.824-7.646,1.674-17.5     c-0.195-0.463-0.146-0.992,0.133-1.41c0.277-0.42,0.746-0.672,1.25-0.672h14.762l0,0c0.656,0,1.273-0.254,1.738-0.719     c0.463-0.465,0.719-1.082,0.719-1.738c0-1.355-1.103-2.459-2.457-2.459c-0.828,0-1.5-0.672-1.5-1.5s0.672-1.5,1.5-1.5     c1.354,0,2.457-1.102,2.457-2.457s-1.103-2.459-2.457-2.459c-0.828,0-1.5-0.672-1.5-1.5s0.672-1.5,1.5-1.5     c1.354,0,2.457-1.104,2.457-2.459s-1.103-2.457-2.457-2.457c-0.828,0-1.5-0.672-1.5-1.5c0-0.799,0.625-1.477,1.422-1.52     c1.307-0.068,2.331-1.141,2.331-2.439c0-1.301-1.024-2.371-2.331-2.439c-0.061-0.004-0.118-0.01-0.176-0.02H22.214     c-0.695,0-1.262,0.566-1.262,1.262v26.143c0,0.677,0.533,1.228,1.214,1.253c0.03,0.002,0.077,0.006,0.122,0.01h0.449     c0.063,0,0.127,0.004,0.189,0.012c1.201,0.154,2.26,0.771,2.981,1.74c0.045,0.063,0.086,0.127,0.122,0.195     c0.143,0.27,0.294,0.567,0.448,0.883C28.33,39.093,30.295,44.609,29.333,49.857z">
+                          </path>
+                        </g>
+                      </g>
+                    </g>
+                  </svg><img></span>&nbsp;Try Again
+              </a>
             </div>
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
-              <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                <div class="u-align-center u-video u-video-contain u-video-1">
-                  <div class="embed-responsive embed-responsive-1">
-                    <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/B9YKnNtFqds?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
-                  </div>
+          </div>
+          <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-2">
+            <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
+              <div class="u-align-center u-video u-video-contain u-video-1">
+                <div class="embed-responsive embed-responsive-1">
+                  <img class="imgTaken" [src]="cameraService.webcamImage.imageAsDataUrl"/>
                 </div>
               </div>
             </div>
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3">
-              <div class="u-container-layout u-valign-top-xs u-container-layout-3">
-                <a href="https://nicepage.com/c/tabs-website-templates" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-text-hover-grey-90 u-btn-2"><span class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><g><g><path d="M512,304c0-12.821-5.099-24.768-13.888-33.579c9.963-10.901,15.04-25.515,13.653-40.725    c-2.496-27.115-26.923-48.363-55.637-48.363H324.352c6.528-19.819,16.981-56.149,16.981-85.333c0-46.272-39.317-85.333-64-85.333    c-22.144,0-37.995,12.48-38.656,12.992c-2.539,2.027-4.011,5.099-4.011,8.341v72.341L173.205,237.44l-2.539,1.301v-4.075    c0-5.888-4.779-10.667-10.667-10.667H53.333C23.915,224,0,247.915,0,277.333V448c0,29.419,23.915,53.333,53.333,53.333h64    c23.061,0,42.773-14.72,50.197-35.264C185.28,475.2,209.173,480,224,480h195.819c23.232,0,43.563-15.659,48.341-37.248    c2.453-11.136,1.024-22.336-3.84-32.064c15.744-7.915,26.347-24.192,26.347-42.688c0-7.552-1.728-14.784-4.992-21.312    C501.419,338.752,512,322.496,512,304z M467.008,330.325c-4.117,0.491-7.595,3.285-8.917,7.232    c-1.301,3.947-0.213,8.277,2.816,11.136c5.419,5.099,8.427,11.968,8.427,19.307c0,13.461-10.176,24.768-23.637,26.325    c-4.117,0.491-7.595,3.285-8.917,7.232c-1.301,3.947-0.213,8.277,2.816,11.136c7.019,6.613,9.835,15.893,7.723,25.451    c-2.624,11.904-14.187,20.523-27.499,20.523H224c-17.323,0-46.379-8.128-56.448-18.219c-3.051-3.029-7.659-3.925-11.627-2.304    c-3.989,1.643-6.592,5.547-6.592,9.856c0,17.643-14.357,32-32,32h-64c-17.643,0-32-14.357-32-32V277.333c0-17.643,14.357-32,32-32    h96V256c0,3.691,1.92,7.125,5.077,9.088c3.115,1.877,7.04,2.069,10.368,0.448l21.333-10.667c2.155-1.067,3.883-2.859,4.907-5.056    l64-138.667c0.64-1.408,0.981-2.944,0.981-4.48V37.781C260.437,35.328,268.139,32,277.333,32C289.024,32,320,61.056,320,96    c0,37.547-20.437,91.669-20.629,92.203c-1.237,3.264-0.811,6.955,1.173,9.856c2.005,2.88,5.291,4.608,8.789,4.608h146.795    c17.792,0,32.896,12.736,34.389,28.992c1.131,12.16-4.715,23.723-15.189,30.187c-3.264,2.005-5.205,5.632-5.056,9.493    s2.368,7.317,5.781,9.088c9.024,4.587,14.613,13.632,14.613,23.573C490.667,317.461,480.491,328.768,467.008,330.325z"></path>
-</g>
-</g><g><g><path d="M160,245.333c-5.888,0-10.667,4.779-10.667,10.667v192c0,5.888,4.779,10.667,10.667,10.667s10.667-4.779,10.667-10.667    V256C170.667,250.112,165.888,245.333,160,245.333z"></path>
-</g>
-</g></svg><img></span>&nbsp;Keep
-                </a>
-              </div>
+          </div>
+          <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3">
+            <div class="u-container-layout u-valign-top-xs u-container-layout-3">
+              <a (click)="cameraService.uploadPic()"
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-2-light-1 u-radius-50 u-text-body-alt-color u-text-hover-grey-90 u-btn-2"><span
+                  class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px"
+                    style="width: 1em; height: 1em;">
+                    <g>
+                      <g>
+                        <path
+                          d="M512,304c0-12.821-5.099-24.768-13.888-33.579c9.963-10.901,15.04-25.515,13.653-40.725    c-2.496-27.115-26.923-48.363-55.637-48.363H324.352c6.528-19.819,16.981-56.149,16.981-85.333c0-46.272-39.317-85.333-64-85.333    c-22.144,0-37.995,12.48-38.656,12.992c-2.539,2.027-4.011,5.099-4.011,8.341v72.341L173.205,237.44l-2.539,1.301v-4.075    c0-5.888-4.779-10.667-10.667-10.667H53.333C23.915,224,0,247.915,0,277.333V448c0,29.419,23.915,53.333,53.333,53.333h64    c23.061,0,42.773-14.72,50.197-35.264C185.28,475.2,209.173,480,224,480h195.819c23.232,0,43.563-15.659,48.341-37.248    c2.453-11.136,1.024-22.336-3.84-32.064c15.744-7.915,26.347-24.192,26.347-42.688c0-7.552-1.728-14.784-4.992-21.312    C501.419,338.752,512,322.496,512,304z M467.008,330.325c-4.117,0.491-7.595,3.285-8.917,7.232    c-1.301,3.947-0.213,8.277,2.816,11.136c5.419,5.099,8.427,11.968,8.427,19.307c0,13.461-10.176,24.768-23.637,26.325    c-4.117,0.491-7.595,3.285-8.917,7.232c-1.301,3.947-0.213,8.277,2.816,11.136c7.019,6.613,9.835,15.893,7.723,25.451    c-2.624,11.904-14.187,20.523-27.499,20.523H224c-17.323,0-46.379-8.128-56.448-18.219c-3.051-3.029-7.659-3.925-11.627-2.304    c-3.989,1.643-6.592,5.547-6.592,9.856c0,17.643-14.357,32-32,32h-64c-17.643,0-32-14.357-32-32V277.333c0-17.643,14.357-32,32-32    h96V256c0,3.691,1.92,7.125,5.077,9.088c3.115,1.877,7.04,2.069,10.368,0.448l21.333-10.667c2.155-1.067,3.883-2.859,4.907-5.056    l64-138.667c0.64-1.408,0.981-2.944,0.981-4.48V37.781C260.437,35.328,268.139,32,277.333,32C289.024,32,320,61.056,320,96    c0,37.547-20.437,91.669-20.629,92.203c-1.237,3.264-0.811,6.955,1.173,9.856c2.005,2.88,5.291,4.608,8.789,4.608h146.795    c17.792,0,32.896,12.736,34.389,28.992c1.131,12.16-4.715,23.723-15.189,30.187c-3.264,2.005-5.205,5.632-5.056,9.493    s2.368,7.317,5.781,9.088c9.024,4.587,14.613,13.632,14.613,23.573C490.667,317.461,480.491,328.768,467.008,330.325z">
+                        </path>
+                      </g>
+                    </g>
+                    <g>
+                      <g>
+                        <path
+                          d="M160,245.333c-5.888,0-10.667,4.779-10.667,10.667v192c0,5.888,4.779,10.667,10.667,10.667s10.667-4.779,10.667-10.667    V256C170.667,250.112,165.888,245.333,160,245.333z">
+                        </path>
+                      </g>
+                    </g>
+                  </svg><img></span>&nbsp;Keep
+              </a>
             </div>
           </div>
         </div>
       </div>
-      <div class="u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-        <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
-          <input type="hidden" id="siteId" name="siteId" value="1217604343">
-          <input type="hidden" id="pageId" name="pageId" value="123860642">
-          <div class="u-align-center u-form-group u-form-submit">
-            <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-2-base u-btn-3">DONE</a>
-            <input type="submit" value="submit" class="u-form-control-hidden">
-          </div>
-          <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-          <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
-          <input type="hidden" value="" name="recaptchaResponse">
-        </form>
-      </div>
     </div>
-  </section>
+    <div class="u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
+      <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom"
+        name="form" style="padding: 10px;">
+        <input type="hidden" id="siteId" name="siteId" value="1217604343">
+        <input type="hidden" id="pageId" name="pageId" value="123860642">
+        <div class="u-align-center u-form-group u-form-submit">
+          <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-2-base u-btn-3">DONE</a>
+          <input type="submit" value="submit" class="u-form-control-hidden">
+        </div>
+        <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+        <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try
+          again. </div>
+        <input type="hidden" value="" name="recaptchaResponse">
+      </form>
+    </div>
+  </div>
+</section>
