--- a/src/app/add-image-feature/components/camera-approve-pic/camera-approve-pic.component.css
+++ b/src/app/add-image-feature/components/camera-approve-pic/camera-approve-pic.component.css
@@ -2,6 +2,15 @@
     min-height: 538px;
   }
   
+
+  .imgTaken{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
   .u-section-1 .u-layout-wrap-1 {
     margin-top: 8px;
     margin-bottom: 0;
