--- a/src/app/add-image-feature/components/camera-take-pic/camera-take-pic.component.html
+++ b/src/app/add-image-feature/components/camera-take-pic/camera-take-pic.component.html
@@ -39,22 +39,17 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="u-expanded-width-xs u-form u-form-1">
-      <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom"
-        name="form" style="padding: 10px;">
-        <input type="hidden" id="siteId" name="siteId" value="1217604343">
-        <input type="hidden" id="pageId" name="pageId" value="123860642">
-        <div class="u-align-center u-form-group u-form-submit">
-          <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-2-base u-btn-2">DONE</a>
-          <input type="submit" value="submit" class="u-form-control-hidden">
+        <div class="u-form u-form-2">
+          <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
+            <input type="hidden" id="siteId" name="siteId" value="1217604343">
+            <input type="hidden" id="pageId" name="pageId" value="123860642">
+            <div class="u-align-center u-form-group u-form-submit">
+              <a routerLink="/gallery" class="u-border-none u-btn u-btn-submit u-button-style u-palette-2-base u-btn-5">DONE</a>
+              <input type="submit" value="submit" class="u-form-control-hidden">
+            </div>
+          </form>
         </div>
-        <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-        <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try
-          again. </div>
-        <input type="hidden" value="" name="recaptchaResponse">
-      </form>
+      </div>
     </div>
   </div>
 </section>
