--- a/src/app/add-image-feature/components/local-image-add/local-image-add.component.html
+++ b/src/app/add-image-feature/components/local-image-add/local-image-add.component.html
@@ -2,33 +2,32 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-form u-form-1">
         <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
-          <input type="hidden" id="siteId" name="siteId" value="1217604343">
-          <input type="hidden" id="pageId" name="pageId" value="123860642">
-          <div class="u-align-center u-form-group u-form-submit">
-            <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-grey-70 u-btn-1">Upload New Image<br>
+          <div *ngIf="this.isAbleToUpload" class="u-align-center u-form-group u-form-submit">
+            <a class="u-border-none u-btn u-btn-submit u-button-style u-grey-70 u-btn-1">Upload New Image<br>
+              <input
+              type="file"
+              accept="image/*"
+              (change)="processFile($event)">
             </a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
-          <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-          <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
-          <input type="hidden" value="" name="recaptchaResponse">
         </form>
       </div><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
       <div class="u-blog u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-blog-1">
         <div class="u-repeater u-repeater-1"><!--blog_post-->
-          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-1" data-image-width="2000" data-image-height="1333">
+          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-1" [ngStyle]="{'background-image':image1}" data-image-width="2000" data-image-height="1333">
             <div class="u-container-layout u-similar-container u-container-layout-1"><!--blog_post_readmore-->
-              <a href="blog/post.html" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-2"><!--blog_post_readmore_content-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+              <a (click)="removeImage(1)" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-2">Remove Image</a>
             </div>
           </div><!--/blog_post--><!--blog_post-->
-          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-2" data-image-width="2000" data-image-height="1333">
+          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-2" [ngStyle]="{'background-image':image2}" data-image-width="2000" data-image-height="1333">
             <div class="u-container-layout u-similar-container u-container-layout-2"><!--blog_post_readmore-->
-              <a href="blog/post-1.html" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-3"><!--blog_post_readmore_content-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+              <a (click)="removeImage(2)" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-3">Remove Image</a>
             </div>
           </div><!--/blog_post--><!--blog_post-->
-          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-3" data-image-width="2000" data-image-height="1333">
+          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-3" [ngStyle]="{'background-image':image3}" data-image-width="2000" data-image-height="1333">
             <div class="u-container-layout u-similar-container u-container-layout-3"><!--blog_post_readmore-->
-              <a href="blog/post-2.html" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-4"><!--blog_post_readmore_content-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+              <a (click)="removeImage(3)" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-4">Remove Image</a>
             </div>
           </div><!--/blog_post-->
         </div>
@@ -38,7 +37,7 @@
           <input type="hidden" id="siteId" name="siteId" value="1217604343">
           <input type="hidden" id="pageId" name="pageId" value="123860642">
           <div class="u-align-center u-form-group u-form-submit">
-            <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-2-base u-btn-5">DONE</a>
+            <a (click)="uploadImages()" class="u-border-none u-btn u-btn-submit u-button-style u-palette-2-base u-btn-5">DONE</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
           <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
