--- a/src/app/core/components/hamburger-menu/hamburger-menu.component.html
+++ b/src/app/core/components/hamburger-menu/hamburger-menu.component.html
@@ -20,7 +20,7 @@
                 <a class="scroll-link" (click)="sideNavService.togglePrivatePopUpVisible()"><i class="fas fa-cog"></i> Enter / Exit private mode</a>
             </li>
             <li>
-                <a class="scroll-link" href="#section-2"><i class="fas fa-user"></i> Edit Categories</a>
+                <a class="scroll-link" routerLink="/categories"><i class="fas fa-user"></i> Edit Categories</a>
             </li>
             <li>
                 <a class="scroll-link" href="#section-5"><i class="fas fa-pencil-alt"></i> About Us</a>
