--- a/src/app/popups-feature/components/edit-image/edit-image.component.css
+++ b/src/app/popups-feature/components/edit-image/edit-image.component.css
@@ -70,7 +70,7 @@
 	 width: 100%;
 	 height: 100%;
 	 transform: scale(2);
-	 object-fit: cover;
+	 object-fit: fill;
 	 transition-duration: 1.2s;
 }
  .modal.is-open {
@@ -128,7 +128,7 @@
 }
 select{
 	width:100%;
-	height:30px;
+	height:100%;
 }
  .input-label {
 	 font-size: 11px;
