--- a/src/app/popups-feature/components/edit-image/edit-image.component.html
+++ b/src/app/popups-feature/components/edit-image/edit-image.component.html
@@ -5,24 +5,26 @@
             <p class="modal-desc">Click save to save your changes!</p>
             <div class="input-block">
                 <label for="title" class="input-label">Title</label>
-                <input type="text" name="title" id="title" placeholder="Title">
+                <input type="text" name="title" id="title" placeholder="Image title" [(ngModel)]="editPopService.newTitle">
             </div>
             <div class="input-block">
-                <app-location-picker></app-location-picker>
+                <app-location-picker (locationChanged)="handleLocationChanged($event)"></app-location-picker>
             </div>
             <div class="input-block">
-                <select multiple></select>
+                <select multiple [(ngModel)]="editPopService.selectedCategories" size="3">
+                    <option *ngFor="let category of categories" [value]="category">{{category}}</option>
+                </select>
             </div>
             <div class="modal-buttons">
-                <a href="" class="">Save Changes</a>
-                <button class="input-button">Save</button>
+                <span>Save Changes</span>
+                <button (click)="saveImageData()" class="input-button">Save</button>
             </div>
         </div>
         <div class="modal-right">
-            <img src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dfd2ec5a01006fd8c4d7592a381d3776&auto=format&fit=crop&w=1000&q=80"
+            <img [src]="editPopService.currentImageSrc"
                 alt="">
         </div>
-        <button class="icon-button close-button" (click)="editPopService.toggleEditPopUpVisible()">
+        <button class="icon-button close-button" (click)="editPopService.toggleEditPopUpVisible(null)">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                 <path
                     d="M 25 3 C 12.86158 3 3 12.86158 3 25 C 3 37.13842 12.86158 47 25 47 C 37.13842 47 47 37.13842 47 25 C 47 12.86158 37.13842 3 25 3 z M 25 5 C 36.05754 5 45 13.94246 45 25 C 45 36.05754 36.05754 45 25 45 C 13.94246 45 5 36.05754 5 25 C 5 13.94246 13.94246 5 25 5 z M 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.980469 15.990234 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 z">
